--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+        <link rel="stylesheet" href="style.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -11,7 +12,7 @@
     <body>
         <header>
             <!-- Navbar -->
-            <nav class="navbar navbar-expand-sm navbar-light fixed-top">
+            <nav class="navbar navbar-expand navbar-light bg-transparent fixed-top">
               <div class="container-fluid">
                 <button
                   class="navbar-toggler"
