Added javascript harjoitukset

--- a/Harjoitukset/Harjoitus2/Harjoitus2.3.html
+++ b/Harjoitukset/Harjoitus2/Harjoitus2.3.html
@@ -57,7 +57,7 @@
             
         </script>
 
-        <h1>Toisen asteen yhtälön ratkaisu</h1>
+        <h1>Alennuslaskuri</h1>
                 
         <h2>Syötä arvot</h2>
 
