--- a/Harjoitukset/Harjoitus4/4.2.html
+++ b/Harjoitukset/Harjoitus4/4.2.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta charset="utf-8">
-<title>Annettujen lukujen summa</title>
+<title>Kruunavaiklaava</title>
 
 <script>
 function calcSum() {
