--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                       <a class="nav-link" href="tietoja.html">Tietoja</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="bolg.html">Portfolio</a>
+                      <a class="nav-link" href="Harjoitukset/harj.html">Portfolio</a>
                     </li>
                   </ul>
                 </div>
@@ -46,7 +46,7 @@
             <div
               class="p-5 text-center bg-image"
               style="
-                background-image: url('tausta1.jpg');
+                background-image: url('Kuvat/tausta1.jpg');
                 height: 180vh;
                 min-height: 400px;
                 background-size: cover;
@@ -56,9 +56,9 @@
                 <div class="d-flex justify-content-center align-items-center h-50">
                   <div class="text-black">
                     <h1 class="mb-3">Tuukka Hartikainen</h1>
-                    <h4 class="mb-3">Portfolio/CV</h4>
-                    <a class="btn btn-outline-dark btn-lg" href="#!" role="button"
-                      >Call to action</a
+                    
+                    <a class="btn btn-outline-dark btn-lg" href="tietoja.html" role="button"
+                      >Portfolio/CV</a
                     >
                   </div>
                 </div>
@@ -66,6 +66,17 @@
             </div>
             <!-- Background image -->
           </header>
+          <div
+          class="p-5 text-center bg-image"
+          style="
+            background-image: url('Kuvat/vaasa.jpg');
+            height: auto;
+            min-height: 800px;
+            width: auto;
+            background-size: cover;
+          "
+        >   
+
         
     </body>
     </html>
