--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                       <a class="nav-link" href="tietoja.html">Tietoja</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="Harjoitukset/harj.html">Portfolio</a>
+                      <a class="nav-link" href="harj.html">Portfolio</a>
                     </li>
                   </ul>
                 </div>
@@ -46,14 +46,15 @@
             <div
               class="p-5 text-center bg-image"
               style="
-                background-image: url('Kuvat/tausta1.jpg');
-                height: 180vh;
-                min-height: 400px;
+                background-image: url('Kuvat/tausta2.jpg');
+                height: auto;
+                min-height: 700px;
+                width: auto;
                 background-size: cover;
               "
             >
               <div class="mask" style="background-color: rgba(0, 0, 0, 0)">
-                <div class="d-flex justify-content-center align-items-center h-50">
+                <div class="d-flex justify-content-center align-items-center h-100">
                   <div class="text-black">
                     <h1 class="mb-3">Tuukka Hartikainen</h1>
                     
