--- a/tietoja.html
+++ b/tietoja.html
@@ -34,7 +34,7 @@
                                   <a class="nav-link" href="tietoja.html">Tietoja</a>
                                 </li>
                                 <li class="nav-item">
-                                  <a class="nav-link" href="bolg.html">Portfolio</a>
+                                  <a class="nav-link" href="harj.html">Portfolio</a>
                                 </li>
                               </ul>
                             </div>
@@ -46,18 +46,21 @@
                         <div
                           class="p-5 text-center bg-image"
                           style="
-                            background-image: url('tausta1.jpg');
+                            background-image: url('Kuvat/tausta1.jpg');
                             height: 180vh;
                             min-height: 400px;
                             background-size: cover;
                           "
                         >
-                          <div class="mask" style="background-color: rgba(0, 0, 0, 0.486)">
-                            <div class="d-flex justify-content-center align-items-center h-50">
-                              <div class="text-white">
+                          <div class="mask" style="background-color: rgba(0, 0, 0, 0)">
+                            <div class="d-flex justify-content-center align-items-center h-30">
+                              <div class="text-black">
+                                <img src="Kuvat/mä.png" class="rounded-circle" alt="Cinque Terre" width="300px" height="300px"> 
                                 <h1 class="mb-3">Tuukka Hartikainen</h1>
-                                <p>Hei, Olen Tuukka Hartikainen, ensimmäisen vuoden kandidaattiopiskelija Vaasan yliopistossa Informaatiotekniikan opintosuunnassa. Opintojeni tavoitteena on automaatio- ja tietotekniikan DI:n tutkinto</p>
-                                <p>Olen koonnut tälle nettisivulle projekteja, koulutehtäviä, ja raportteja ajatuksena jonkinlainen portfolio/CV omien projektien hallitaan ja dokumentointiin, sekä helpottamaan mahdollista työhaastattelijaa luomaan kuvaa minusta ja osaamisestani.</p>
+                                <p>Hei, Olen Tuukka Hartikainen, ensimmäisen vuoden kandidaattiopiskelija Vaasan yliopistossa Informaatiotekniikan opintosuunnassa.</p> 
+                                <p>Opintojeni tavoitteena on automaatio- ja tietotekniikan DI:n tutkinto.</p>
+                                <p>Olen koonnut tälle nettisivulle projekteja, koulutehtäviä, ja raportteja ajatuksena jonkinlainen portfolio/CV omien projektien hallitaan ja dokumentointiin,</p> 
+                                <p>sekä helpottamaan mahdollista työhaastattelijaa luomaan kuvaa minusta ja osaamisestani.</p>
                               </div>
                             </div>
                           </div>
