--- a/harj.html
+++ b/harj.html
@@ -10,7 +10,7 @@
 
     <header>
         <!-- Navbar -->
-        <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
+        <nav class="navbar navbar-expand navbar-dark bg-dark fixed-top">
           <div class="container-fluid">
             <button
               class="navbar-toggler"
