--- a/tietoja.html
+++ b/tietoja.html
@@ -12,7 +12,7 @@
                 <body>
                     <header>
                         <!-- Navbar -->
-                        <nav class="navbar navbar-expand-sm navbar-light fixed-top">
+                        <nav class="navbar navbar-expand navbar-light fixed-top">
                           <div class="container-fluid">
                             <button
                               class="navbar-toggler"
