--- a/harj.html
+++ b/harj.html
@@ -79,6 +79,7 @@
             <a href="Harjoitukset/Harjoitus4/4.1.html" class="">for-silmukka esimerkki</a>
             <a href="Harjoitukset/Harjoitus4/4.2.html" class="">Kruuna vai klaava?</a>
             <a href="Harjoitukset/Harjoitus4/4.3.html" class="">Kemikaalin valmistuslämpötilan laskeminen</a>
+            <a href="Harjoitukset/Harjoitus4/sijoituslaskuri2.0.html" class="">Sijoituslaskuri2.0. Wade tää!/a>
         </nav>
         </div>   
     </body>
