--- a/tietoja.html
+++ b/tietoja.html
@@ -55,7 +55,7 @@
                           <div class="mask" style="background-color: rgba(0, 0, 0, 0)">
                             <div class="d-flex justify-content-center align-items-center h-30">
                               <div class="text-black">
-                                <img src="Kuvat/mä.png" class="rounded-circle" alt="Cinque Terre" width="300px" height="300px"> 
+                                <img src="Kuvat/mä.JPG" class="rounded-circle" alt="Cinque Terre" width="300px" height="300px"> 
                                 <h1 class="mb-3">Tuukka Hartikainen</h1>
                                 <p>Hei, Olen Tuukka Hartikainen, ensimmäisen vuoden kandidaattiopiskelija Vaasan yliopistossa Informaatiotekniikan opintosuunnassa.</p> 
                                 <p>Opintojeni tavoitteena on automaatio- ja tietotekniikan DI:n tutkinto.</p>
