--- a/Harjoitukset/Harjoitus4/sijoituslaskuri2.0.html
+++ b/Harjoitukset/Harjoitus4/sijoituslaskuri2.0.html
@@ -81,7 +81,7 @@ function calculaTe() {
 <label>Sijoitettava pääoma: </label><input type="text" id="S"> €<br>
 <label>Korkoprosentti: </label><input type="text" id="p"> %<br>
 <label>Sijoitusaika: </label><input type="text" id="n"> vuotta<br>
-<label>Kuukausisäästö: </label><input type="text" id="kk"> €<br>
+<label>Kuukausisäästö: </label><input type="text" id="kk"> €/kk<br>
 <p><input type="button" value="Calculate" onclick="calculaTe()"></p>
 <p id="results"></p>
 <p id="pienin"></p>
