--- a/harj.html
+++ b/harj.html
@@ -56,8 +56,8 @@
               <div class="mask" style="background-color: rgba(255, 255, 255, 0.425)">
                 <div class="d-flex justify-content-center align-items-center h-130">
                   <div class="text-black">
-                    <h2 class="center">JavaScript ohjelmia</h2>
-                    <a href="Harjoitukset/Harjoitus4/sijoituslaskuri2.0.html" >Sijoituslaskuri2.0</a>
+                    <h2 class="center">Korkoa korolle laskuri</h2>
+                    <a href="sijoituslaskuri/sijoituslaskuri2.0.html" >Sijoituslaskuri2.0</a>
 
                     <h2 class="center">Ohjelmoinnin perusteet kurssin tehtäviä</h2>
                     
