--- a/sijoituslaskuri/sijoituslaskuri2.0.html
+++ b/sijoituslaskuri/sijoituslaskuri2.0.html
@@ -11,6 +11,8 @@
    </head>
 
    <body>
+
+
       <main id="main">
          <section id="about" class="about">
             <div class="container">
@@ -26,13 +28,13 @@
                       <ul>
                          <h3>Syötä:</h3>
                          <form>
-                           <label>Sijoitettava pääoma: </label>
+                           <label>Sijoitettava pääoma (e): </label>
                            <input type="text" class="form-control" id="S">
-                           <label>Korkoprosentti: </label>
+                           <label>Korkoprosentti (%): </label>
                            <input type="text" class="form-control" id="p">
-                           <label>Sijoitusaika: </label>
+                           <label>Sijoitusaika (vuotta): </label>
                            <input type="text" class="form-control" id="n">
-                           <label>Kuukausisäästö: </label>
+                           <label>Kuukausisäästö (e/kk): </label>
                            <input type="text" class="form-control" id="kk">
                            <p></p>
                            <input type="button" value="Calculate" onclick="calculaTe()">
